--- a/components/common.less
+++ b/components/common.less
@@ -64,6 +64,21 @@ body {
 		h1 {
 			margin-top: 1em;
 		}
+
+		@media (min-width: 850px) {
+			.auto-columns {
+				column-count: 2;
+				-moz-column-count: 2;
+				-webkit-column-count: 2;
+			}
+		}
+		@media (min-width: 1170px) {
+			.auto-columns {
+				column-count: 3;
+				-moz-column-count: 3;
+				-webkit-column-count: 3;
+			}
+		}
 	}
 
 	h2 {
