--- a/screen.less
+++ b/screen.less
@@ -6,3 +6,4 @@
 @import "components/navigation.less";
 @import "components/footer.less";
 @import "components/externalLinks.less";
+@import "components/content.less";
