--- a/components/content.less
+++ b/components/content.less
@@ -32,5 +32,10 @@
     &.result {}
     &.solution {}
     &.theorem {}
+
+    &:target {
+      background-color: rgba(228, 158, 32, 0.2);
+      padding: 5px 10px;
+    }
   }
 }
