block math highlight for :target

--- a/components/content.less
+++ b/components/content.less
@@ -39,3 +39,10 @@
     }
   }
 }
+
+div.math-equation {
+  &:target {
+    background-color: rgba(228, 158, 32, 0.2);
+    padding: 5px 10px;
+  }
+}
