copy .example style from categories

--- a/components/content.less
+++ b/components/content.less
@@ -15,7 +15,7 @@
     &.definition {}
     &.example {
       background-color: #f9f9f9;
-      border: 1px solid #a7d7f9;
+      border: 1px solid #aaa;
       margin: 10px 0 15px 0;
       padding: 5px 10px;
     }
