--- a/components/content.less
+++ b/components/content.less
@@ -38,6 +38,11 @@
       padding: 5px 10px;
     }
   }
+
+  .border {
+    padding: 3px 4px;
+    border: 1px solid black;
+  }
 }
 
 div.math-equation {
