fixed lists styling when in styled list

--- a/components/content.less
+++ b/components/content.less
@@ -46,11 +46,11 @@
 
   ul.roman, ul.letters {
     margin-left: 2em;
-    li {
+    & >li {
       list-style-type: none;
       list-style-image: none;
     }
-    li:before {
+    & >li:before {
       content: "(?)";
       display: inline-block;
       margin-left: -2em; /* same as padding-left set on li */
@@ -60,28 +60,28 @@
     }
   }
   ul.roman {
-    li:nth-of-type(1):before { content: "(i)"; }
-    li:nth-of-type(2):before { content: "(ii)"; }
-    li:nth-of-type(3):before { content: "(iii)"; }
-    li:nth-of-type(4):before { content: "(iv)"; }
-    li:nth-of-type(5):before { content: "(v)"; }
-    li:nth-of-type(6):before { content: "(vi)"; }
-    li:nth-of-type(7):before { content: "(vii)"; }
-    li:nth-of-type(8):before { content: "(viii)"; }
-    li:nth-of-type(9):before { content: "(ix)"; }
-    li:nth-of-type(10):before { content: "(x)"; }
+    & >li:nth-of-type(1):before { content: "(i)"; }
+    & >li:nth-of-type(2):before { content: "(ii)"; }
+    & >li:nth-of-type(3):before { content: "(iii)"; }
+    & >li:nth-of-type(4):before { content: "(iv)"; }
+    & >li:nth-of-type(5):before { content: "(v)"; }
+    & >li:nth-of-type(6):before { content: "(vi)"; }
+    & >li:nth-of-type(7):before { content: "(vii)"; }
+    & >li:nth-of-type(8):before { content: "(viii)"; }
+    & >li:nth-of-type(9):before { content: "(ix)"; }
+    & >li:nth-of-type(10):before { content: "(x)"; }
   }
   ul.letters {
-    li:nth-of-type(1):before { content: "(a)"; }
-    li:nth-of-type(2):before { content: "(b)"; }
-    li:nth-of-type(3):before { content: "(c)"; }
-    li:nth-of-type(4):before { content: "(d)"; }
-    li:nth-of-type(5):before { content: "(e)"; }
-    li:nth-of-type(6):before { content: "(f)"; }
-    li:nth-of-type(7):before { content: "(g)"; }
-    li:nth-of-type(8):before { content: "(h)"; }
-    li:nth-of-type(9):before { content: "(i)"; }
-    li:nth-of-type(10):before { content: "(j)"; }
+    & >li:nth-of-type(1):before { content: "(a)"; }
+    & >li:nth-of-type(2):before { content: "(b)"; }
+    & >li:nth-of-type(3):before { content: "(c)"; }
+    & >li:nth-of-type(4):before { content: "(d)"; }
+    & >li:nth-of-type(5):before { content: "(e)"; }
+    & >li:nth-of-type(6):before { content: "(f)"; }
+    & >li:nth-of-type(7):before { content: "(g)"; }
+    & >li:nth-of-type(8):before { content: "(h)"; }
+    & >li:nth-of-type(9):before { content: "(i)"; }
+    & >li:nth-of-type(10):before { content: "(j)"; }
   }
 }
 
