--- a/components/content.less
+++ b/components/content.less
@@ -37,6 +37,13 @@
       background-color: rgba(228, 158, 32, 0.2);
       padding: 5px 10px;
     }
+
+    &:after {
+      display: block;
+      content: " ";
+      clear: both;
+      line-height: 1px;
+    }
   }
 
   .border {
